--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name | Portfolio</title>
+  <title>Al-Wahid Jawad | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
+    <h1>Al-Wahid Jawad</h1>
     <nav aria-label="Main Navigation">
       <ul>
         <li><a href="#about">About</a></li>
@@ -22,14 +22,18 @@
     <section id="about">
       <h2>About Me</h2>
       <img src="images/profile.jpg" alt="Portrait of Your Name" />
-      <p>Hello! I'm a [Your Role]. I love building accessible and inclusive web applications.</p>
+      <p>Allow me to introduce myself, I am current a undergraduate student studying at the University of herfordshire, currently studying Information Technology
+      with an opportunity of a year in industry. While finding opportunities among a pethora of candidates, I believe I can show up consistenly during high pressure
+      moments to deliver not only what is expected of me but even more. </p>
     </section>
 
     <section id="projects">
       <h2>Projects</h2>
       <article>
-        <h3>Project Title</h3>
-        <p>Description of what you built and the technologies used.</p>
+        <h3>Project: Web app Development & Deployment </h3>
+        <p>My most recent project, was a group endeavour where myself and my Four of my fellow peers had embarked on building 
+        a food review site which specialised in filtering nearby takeaways in and around the hertfordshire region. We concluded our trade 
+        in applications such as wordpress and had the sole intention of using languages such as Javascript, HTML and CSS. </p>
         <a href="https://github.com/yourusername/project-repo" aria-label="View Project on GitHub">GitHub</a>
       </article>
       <!-- Add more projects here -->
@@ -38,15 +42,15 @@
     <section id="contact">
       <h2>Contact</h2>
       <ul>
-        <li><a href="mailto:you@example.com">Email Me</a></li>
-        <li><a href="https://linkedin.com/in/yourprofile">LinkedIn</a></li>
+        <li><a href="mailto:alwahidjawad@yahoo.co.uk">Email Me</a></li>
+        <li><a href="https://www.linkedin.com/in/al-wahid/">LinkedIn</a></li>
         <li><a href="https://github.com/yourusername">GitHub</a></li>
       </ul>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Your Name</p>
+    <p>&copy; 2025 Al-Wahid Jawad</p>
   </footer>
 </body>
 </html>
