--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <p>Allow me to introduce myself, I am current a undergraduate student studying at the University of herfordshire, currently studying Information Technology
       with an opportunity of a year in industry. While finding opportunities among a pethora of candidates, I believe I can show up consistenly during high pressure
       moments to deliver not only what is expected of me but even more. </p>
+      <a href="about.html">About Me</a>
     </section>
 
     <section id="projects">
