--- a/index.html
+++ b/index.html
@@ -2,57 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Al-Wahid Jawad | Portfolio</title>
+  <title>AJ’s Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>Al-Wahid Jawad</h1>
-    <nav aria-label="Main Navigation">
-      <ul>
-        <li><a href="#about">About</a></li>
-        <a href="about.html">About Me</a>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
+  <header><h1>Welcome to My Portfolio</h1></header>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="interests.html">Interests</a>
+    <a href="portfolio.html">Portfolio</a>
+  </nav>
   <main>
-    <section id="about">
-      <h2>About Me</h2>
-      <img src="images/profile.jpg" alt="Portrait of Your Name" />
-      <p>Allow me to introduce myself, I am current a undergraduate student studying at the University of herfordshire, currently studying Information Technology
-      with an opportunity of a year in industry. While finding opportunities among a pethora of candidates, I believe I can show up consistenly during high pressure
-      moments to deliver not only what is expected of me but even more. </p>
-    </section>
-
-    <section id="projects">
-      <h2>Projects</h2>
-      <article>
-        <h3>Project: Web app Development & Deployment </h3>
-        <p>My most recent project, was a group endeavour where myself and my Four of my fellow peers had embarked on building 
-        a food review site which specialised in filtering nearby takeaways in and around the hertfordshire region. We concluded our trade 
-        in applications such as wordpress and had the sole intention of using languages such as Javascript, HTML and CSS. </p>
-        <a href="https://github.com/yourusername/project-repo" aria-label="View Project on GitHub">GitHub</a>
-      </article>
-      <!-- Add more projects here -->
-    </section>
-
-    <section id="contact">
-      <h2>Contact</h2>
-      <ul>
-        <li><a href="mailto:alwahidjawad@yahoo.co.uk">Email Me</a></li>
-        <li><a href="https://www.linkedin.com/in/al-wahid/">LinkedIn</a></li>
-        <li><a href="https://github.com/yourusername">GitHub</a></li>
-      </ul>
-    </section>
+    <p>This is my portfolio site to showcase my studies and projects as a computing student.</p>
   </main>
-
-  <footer>
-    <p>&copy; 2025 Al-Wahid Jawad</p>
-  </footer>
+  <footer>© 2025 AJ</footer>
 </body>
 </html>
-
