--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <a href="portfolio.html">Portfolio</a>
   </nav>
   <main>
-    <p>This is my portfolio site to showcase my studies and projects as a computing student.</p>
+    <p>This is my portfolio site to showcase my studies and projects as a IT student.</p>
   </main>
-  <footer>© 2025 AJ</footer>
+  <footer>© 2025 JAWAD</footer>
 </body>
 </html>
