--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About Me</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -15,10 +15,20 @@
     <a href="portfolio.html">Portfolio</a>
   </nav>
   <main>
-    <img src="https://via.placeholder.com/150" alt="Your photo" />
+    <img src="https://via.placeholder.com/150" alt="Placeholder image of AJ" />
     <p><strong>Name:</strong> AJ</p>
-    <p><strong>Year of Study:</strong> 2nd Year</p>
+    <p><strong>University:</strong> University of Hertfordshire</p>
+    <p><strong>Year of Study:</strong> 2nd Year (about to start Level 6)</p>
     <p><strong>Award:</strong> BSc (Hons) Computing</p>
+    <p>
+      I am proud to be a student at the University of Hertfordshire, currently in my second year and eagerly preparing to embark on Level 6 of my studies. My journey so far has been both challenging and rewarding, fueling my passion for technology and learning.
+    </p>
+    <p>
+      One of the most fulfilling aspects of my university experience has been supporting my peers. I take great pride in helping others overcome their academic challenges, which inspired me to become a student body representative. This role allows me to contribute positively to our learning community, fostering collaboration and growth.
+    </p>
+    <p>
+      Outside of academics, I’m passionate about staying active. Running and playing football are not just hobbies for me — they’re a source of energy, focus, and balance in my life. These activities teach me discipline and teamwork, qualities I carry into all areas of my personal and professional development.
+    </p>
   </main>
   <footer>© 2025 AJ</footer>
 </body>
