--- a/about.html
+++ b/about.html
@@ -16,10 +16,10 @@
   </nav>
   <main>
     <img src="https://via.placeholder.com/150" alt="Placeholder image of AJ" />
-    <p><strong>Name:</strong> AJ</p>
+    <p><strong>Name:</strong> Al-Wahid</p>
     <p><strong>University:</strong> University of Hertfordshire</p>
     <p><strong>Year of Study:</strong> 2nd Year (about to start Level 6)</p>
-    <p><strong>Award:</strong> BSc (Hons) Computing</p>
+    <p><strong>Award:</strong> BSc (Hons) Information Technology</p>
     <p>
       I am proud to be a student at the University of Hertfordshire, currently in my second year and eagerly preparing to embark on Level 6 of my studies. My journey so far has been both challenging and rewarding, fueling my passion for technology and learning.
     </p>
